[gd_scene load_steps=11 format=3 uid="uid://qe88s5jktwbu"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_vveha"]
[ext_resource type="Script" path="res://Scripts/SpawnPoint.gd" id="2_elr2i"]
[ext_resource type="Script" path="res://Scripts/DialogPopup.gd" id="2_g11a0"]
[ext_resource type="Texture2D" uid="uid://yc3fnvug6xwy" path="res://Assets/Skeleton_01_White_Idle.png" id="2_kte72"]
[ext_resource type="Texture2D" uid="uid://244k54tformt" path="res://Assets/Untitled.png" id="6_edvi2"]
[ext_resource type="Script" path="res://Scripts/BattleMode.gd" id="6_t5xa3"]
[ext_resource type="PackedScene" uid="uid://u7bmv8uc1d5t" path="res://Scenes/BattleHUD.tscn" id="7_6j3fl"]
[ext_resource type="Script" path="res://Scenes/gun_manager.gd" id="8_lxcok"]
[ext_resource type="Texture2D" uid="uid://dr0uktyeckmjw" path="res://ExclamationTex2D.tres" id="9_73eq5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fi2gj"]
size = Vector2(51, 44)

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_vveha")

[node name="Indication" type="Sprite2D" parent="."]
position = Vector2(-75.9999, 92)
scale = Vector2(0.290179, 0.632076)
texture = ExtResource("6_edvi2")

[node name="BattleLabel" type="Label" parent="."]
offset_left = -14.0
offset_top = -215.0
offset_right = 642.0
offset_bottom = 162.0
text = "Battle Area
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 257.0
offset_top = 86.0
offset_right = 378.0
offset_bottom = 134.0
text = "Testing button"

[node name="Button2" type="Button" parent="."]
offset_left = 553.0
offset_top = 85.0
offset_right = 674.0
offset_bottom = 133.0
text = "Testing button"

[node name="Button3" type="Button" parent="."]
offset_left = -6.0
offset_top = 80.0
offset_right = 115.0
offset_bottom = 128.0
text = "Testing button"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(329, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(49, -22)
shape = SubResource("RectangleShape2D_fi2gj")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
visible = false
texture = ExtResource("2_kte72")
script = ExtResource("2_g11a0")

[node name="Label" type="Label" parent="CollisionShape2D"]
offset_left = -36.0
offset_top = -81.0
offset_right = 43.0
offset_bottom = -58.0
text = "Health: 00"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(311, -22)
shape = SubResource("RectangleShape2D_fi2gj")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D2"]
visible = false
texture = ExtResource("2_kte72")
script = ExtResource("2_g11a0")

[node name="Label" type="Label" parent="CollisionShape2D2"]
offset_left = -36.0
offset_top = -81.0
offset_right = 43.0
offset_bottom = -58.0
text = "Health: 00"

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(595, -23)
shape = SubResource("RectangleShape2D_fi2gj")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D3"]
visible = false
texture = ExtResource("2_kte72")
script = ExtResource("2_g11a0")

[node name="Label" type="Label" parent="CollisionShape2D3"]
offset_left = -36.0
offset_top = -81.0
offset_right = 43.0
offset_bottom = -58.0
text = "Health: 00"

[node name="SpawnControl" type="Node" parent="." node_paths=PackedStringArray("point1", "point2", "point3")]
script = ExtResource("2_elr2i")
point1 = NodePath("../CollisionShape2D")
point2 = NodePath("../CollisionShape2D2")
point3 = NodePath("../CollisionShape2D3")

[node name="BattleMode" type="Node" parent="." node_paths=PackedStringArray("FireButton1", "FireButton2", "FireButton3")]
script = ExtResource("6_t5xa3")
FireButton1 = NodePath("../Button3")
FireButton2 = NodePath("../Button")
FireButton3 = NodePath("../Button2")

[node name="BattleHud" parent="." instance=ExtResource("7_6j3fl")]

[node name="GunManager" type="Node" parent="."]
script = ExtResource("8_lxcok")

[node name="TextureRect" type="TextureRect" parent="GunManager"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_73eq5")

[connection signal="Battlemode" from="." to="BattleMode" method="_on_battle_scene_battlemode"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_pressed"]
